--- a/chatgpt_demo/requirements.txt
+++ b/chatgpt_demo/requirements.txt
@@ -1,35 +1,96 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
 altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+anyio==3.7.1
 appdirs==1.4.4
 asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+backoff==2.2.1
+bcrypt==4.0.1
 beautifulsoup4==4.12.2
 bs4==0.0.1
 certifi==2023.7.22
+chardet==5.2.0
 charset-normalizer==3.2.0
+chroma-hnswlib==0.7.2
+chromadb==0.4.7
+click==8.1.7
+coloredlogs==15.0.1
 cssselect==1.2.0
+dataclasses-json==0.5.14
 Django==4.2.4
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+emoji==2.8.0
+exceptiongroup==1.1.3
 fake-useragent==1.2.1
+fastapi==0.99.1
+filetype==1.2.0
+flatbuffers==23.5.26
+frozenlist==1.4.0
 future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
+h11==0.14.0
+httptools==0.6.0
+humanfriendly==10.0
 idna==3.4
 importlib-metadata==6.8.0
 importlib-resources==6.0.1
+joblib==1.3.2
+langchain==0.0.271
+langsmith==0.0.26
 lxml==4.9.3
 macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
+marshmallow==3.20.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
 mysql-client==0.0.1
+nltk==3.8.1
+numexpr==2.8.5
+numpy==1.25.2
+onnxruntime==1.15.1
+openai==0.27.9
+overrides==7.4.0
+packaging==23.1
 parse==1.19.1
+posthog==3.0.2
+protobuf==4.24.1
+pulsar-client==3.2.0
+pydantic==1.10.12
 pyee==8.2.2
+PyPika==0.48.9
 pyppeteer==1.0.2
 pyquery==2.0.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-magic==0.4.27
 pytz==2023.3
+PyYAML==6.0.1
+regex==2023.8.8
 requests==2.31.0
 requests-html==0.10.0
 six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+sniffio==1.3.0
 soupsieve==2.4.1
+SQLAlchemy==2.0.20
 sqlparse==0.4.4
+starlette==0.27.0
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+tiktoken==0.4.0
+tokenizers==0.13.3
 tqdm==4.66.1
+typing-inspect==0.9.0
 typing_extensions==4.7.1
+unstructured==0.10.5
 urllib3==1.26.16
+uvicorn==0.23.2
+uvloop==0.17.0
 w3lib==2.1.2
+watchfiles==0.19.0
 websockets==10.4
+yarl==1.9.2
 zipp==3.16.2
