--- a/chatgpt_demo/requirements.txt
+++ b/chatgpt_demo/requirements.txt
@@ -52,6 +52,7 @@ numexpr==2.8.5
 numpy==1.25.2
 onnxruntime==1.15.1
 openai==0.27.9
+outcome==1.2.0
 overrides==7.4.0
 packaging==23.1
 parse==1.19.1
@@ -63,6 +64,7 @@ pyee==8.2.2
 PyPika==0.48.9
 pyppeteer==1.0.2
 pyquery==2.0.0
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-magic==0.4.27
@@ -71,8 +73,10 @@ PyYAML==6.0.1
 regex==2023.8.8
 requests==2.31.0
 requests-html==0.10.0
+selenium==4.11.2
 six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
 sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.20
 sqlparse==0.4.4
@@ -83,6 +87,8 @@ tenacity==8.2.3
 tiktoken==0.4.0
 tokenizers==0.13.3
 tqdm==4.66.1
+trio==0.22.2
+trio-websocket==0.10.3
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 unstructured==0.10.5
@@ -92,5 +98,6 @@ uvloop==0.17.0
 w3lib==2.1.2
 watchfiles==0.19.0
 websockets==10.4
+wsproto==1.2.0
 yarl==1.9.2
 zipp==3.16.2
