update swift files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ chatgpt_demo/.venv/*
 **/*.xcuserstate*
 **/*.xcuserdatad*
 constants.py
+chatgpt_demo/db.sqlite3
+chatgpt_demo/chatgpt_demo/__pycache__/*
+chatgpt_demo/.env
+ChatGPTDemoiOS/ChatGPTDemo/ChatGPTDemo.xcodeproj/project.xcworkspace/xcuserdata/*
