--- a/ChatGPTDemoiOS/MODULE.bazel
+++ b/ChatGPTDemoiOS/MODULE.bazel
@@ -12,3 +12,4 @@ bazel_dep(name = "rules_swift", version = "1.15.1")
 bazel_dep(name = "apple_support", version = "1.11.1")
 bazel_dep(name = "rules_xcodeproj", version = "1.15.0")
 bazel_dep(name = "bazel_features", version = "1.3.0")
+bazel_dep(name = "rules_swift_package_manager", version = "0.25.0")
