Add images and listings.plist, also initial add of listing data manager

--- a/ChatGPTDemoiOS/Resources/BUILD
+++ b/ChatGPTDemoiOS/Resources/BUILD
@@ -10,5 +10,5 @@ exports_files([
 
 filegroup(
    name = "ListingImages",
-   srcs = glob(["Resources/listingImages/*"]),
+   srcs = glob(["listingImages/*.jpeg"]),
 )
