Add listing list view

--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -80,7 +80,7 @@ Other things to note
 No children please: safety reasons. 2 guest limit.</string>
 		<key>images</key>
 		<array>
-			<string>listing1_1.jpg</string>
+			<string>https://a0.muscache.com/im/pictures/38691cf9-b5c6-4052-bc79-60ea4a6ace72.jpg?im_w=1200</string>
 		</array>
 	</dict>
 	<dict>
@@ -176,7 +176,7 @@ Thank you kindly
 Georgia + Asher</string>
 		<key>images</key>
 		<array>
-			<string>listing2_1.jpg</string>
+			<string>https://a0.muscache.com/im/pictures/7accc1b8-639d-4bd1-be75-9da488c4b0dc.jpg?im_w=1200</string>
 		</array>
 	</dict>
 	<dict>
@@ -225,7 +225,7 @@ Other things to note
 ***Please note: If you are booking this property during an event, the parking spot may not be available as the city of Capitola will often times block off Esplanade for these events. There is a parking pass inside the home that you can use to park around the village***</string>
 		<key>images</key>
 		<array>
-			<string>listing3_1.jpg</string>
+			<string>https://a0.muscache.com/im/pictures/prohost-api/Hosting-680532366698763136/original/17f39935-3104-40db-9510-b1387190c346.jpeg?im_w=1200</string>
 		</array>
 	</dict>
 </array>
