hook into chatview

--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -20,8 +20,7 @@
 		<key>url</key>
 		<string>https://www.airbnb.com/rooms/49986215</string>
 		<key>description</key>
-		<string>About this space
-On 9 private acres overlooking the stunning Beach and Pacific ocean from a breathtaking cliff top view. Stunning sunrises and sunset greet you in this fully equipped new 2022 Airstream. Fully loaded with all the amenities to make your glamping experience perfect. Fire pit, outside BBQ, outside griddle, A/C and fully stocked kitchen. Comes will full bathroom with shower. Truly a rare experience and located within 10 mins of Half Moon Bay shopping. Beach access short walk or drive.
+		<string>On 9 private acres overlooking the stunning Beach and Pacific ocean from a breathtaking cliff top view. Stunning sunrises and sunset greet you in this fully equipped new 2022 Airstream. Fully loaded with all the amenities to make your glamping experience perfect. Fire pit, outside BBQ, outside griddle, A/C and fully stocked kitchen. Comes will full bathroom with shower. Truly a rare experience and located within 10 mins of Half Moon Bay shopping. Beach access short walk or drive.
 The space
 These unmatched views and private location comes fully loaded with the new Airstream. Features all the amenities, comfort and ease associated with Airstream living
 
@@ -105,8 +104,7 @@ No children please: safety reasons. 2 guest limit.</string>
 		<key>url</key>
 		<string>https://www.airbnb.com/rooms/889189502572660333</string>
 		<key>description</key>
-		<string>About this space
-Built in 1950, this Mid-Century Modern gem has stunning views of the San Francisco Bay from every room in the house. It is well equipped with modern appliances, two bedrooms (w/ awesome beds), two bathrooms, a super cozy couch. The home is very private w/ outdoor spaces galore and your own bubbling hot tub. Whether you come here to relax or play, you will love how tranquil the space is. Minutes to downtown Oakland and the Zoo with easy access to San Francisco.
+		<string>Built in 1950, this Mid-Century Modern gem has stunning views of the San Francisco Bay from every room in the house. It is well equipped with modern appliances, two bedrooms (w/ awesome beds), two bathrooms, a super cozy couch. The home is very private w/ outdoor spaces galore and your own bubbling hot tub. Whether you come here to relax or play, you will love how tranquil the space is. Minutes to downtown Oakland and the Zoo with easy access to San Francisco.
 Other things to note
 Welcome Friends!
 
@@ -205,8 +203,7 @@ Georgia + Asher</string>
 		<key>url</key>
 		<string>https://www.airbnb.com/rooms/680532366698763136</string>
 		<key>description</key>
-		<string>About this space
-This is a beautiful, iconic, beachfront property in the famous Capitola Village overlooking the water. This is one of the iconic &quot;Six Sisters&quot; properties that have not been available to rent in years! You can enjoy a charming brightly lit 5 bedroom home with a patio area just a few steps to the sand, restaurants, and shops! The home is fully equipped with everything you need for a wonderful vacation away from home, and plenty of entertainment if you choose to spend the night in or out!
+		<string>This is a beautiful, iconic, beachfront property in the famous Capitola Village overlooking the water. This is one of the iconic &quot;Six Sisters&quot; properties that have not been available to rent in years! You can enjoy a charming brightly lit 5 bedroom home with a patio area just a few steps to the sand, restaurants, and shops! The home is fully equipped with everything you need for a wonderful vacation away from home, and plenty of entertainment if you choose to spend the night in or out!
 The space
 - Comfortably sleeps up to 12 adults
 - 5 bedrooms
