--- a/ChatGPTDemoiOS/MODULE.bazel
+++ b/ChatGPTDemoiOS/MODULE.bazel
@@ -12,4 +12,17 @@ bazel_dep(name = "rules_swift", version = "1.15.1")
 bazel_dep(name = "apple_support", version = "1.11.1")
 bazel_dep(name = "rules_xcodeproj", version = "1.15.0")
 bazel_dep(name = "bazel_features", version = "1.3.0")
-bazel_dep(name = "rules_swift_package_manager", version = "0.25.0")
+bazel_dep(name = "gazelle", version = "0.35.0")
+bazel_dep(name = "rules_swift_package_manager", version = "0.26.2")# swift_deps START
+swift_deps = use_extension(
+    "@rules_swift_package_manager//:extensions.bzl",
+    "swift_deps",
+)
+swift_deps.from_file(
+    deps_index = "//:swift_deps_index.json",
+)
+use_repo(
+    swift_deps,
+    "swiftpkg_alamofire",
+)
+# swift_deps END
