update airbnb listing info

--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -6,17 +6,17 @@
 		<key>id</key>
 		<string>49986215</string>
 		<key>location</key>
-		<string>Freedom, California</string>
+		<string>Half Moon Bay, California</string>
 		<key>title</key>
 		<string>Camper/RV in Half Moon Bay, California</string>
 		<key>capacity</key>
-		<string>12 guests • 3 bedrooms • 6 beds • 3 baths</string>
+		<string>2 guests • 1 bedroom • 2 beds •1 bath</string>
 		<key>distance</key>
 		<string>50 miles away</string>
 		<key>availability</key>
 		<string>5 nights * Feb 4- 9</string>
 		<key>rating</key>
-		<string>4.95</string>
+		<string>4.97</string>
 		<key>url</key>
 		<string>https://www.airbnb.com/rooms/49986215</string>
 		<key>description</key>
@@ -90,11 +90,11 @@ No children please: safety reasons. 2 guest limit.</string>
 		<key>id</key>
 		<string>889189502572660333</string>
 		<key>location</key>
-		<string>Austin, Texas</string>
+		<string>San Francisco, CA</string>
 		<key>title</key>
 		<string>Relaxing Bay view home w/ hottub</string>
 		<key>capacity</key>
-		<string>6 guests • 2 bedrooms • 4 beds •2 baths</string>
+		<string>5 guests • 2 bedrooms • 2 beds •2 baths</string>
 		<key>distance</key>
 		<string>75 miles away</string>
 		<key>availability</key>
@@ -189,7 +189,7 @@ Georgia + Asher</string>
 		<key>id</key>
 		<string>680532366698763136</string>
 		<key>location</key>
-		<string>Santa Barbra, CA</string>
+		<string>Capitola, California</string>
 		<key>title</key>
 		<string>Five Bedroom Beachfront Home in Capitola Village</string>
 		<key>capacity</key>
