add error checks for reading api keys from Info.plist

--- a/ChatGPTDemoiOS/Info.plist
+++ b/ChatGPTDemoiOS/Info.plist
@@ -45,8 +45,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>OpenAIAPIKey</key>
-	<string>ADD_OPEN_AI_API_KEY</string>
+	<string></string>
 	<key>OpenAIAssistantId</key>
-	<string>ADD_OPEN_AI_ASSISTANT_ID</string>
+	<string></string>
 </dict>
 </plist>
