Add in another listing, clean up training code and growing textfield

--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -4,6 +4,81 @@
 <array>
 	<dict>
 		<key>id</key>
+		<string>677112</string>
+		<key>location</key>
+		<string>Bolton, New York</string>
+		<key>title</key>
+		<string>&apos;Highlands Castle&apos; overlooking Lake George!</string>
+		<key>capacity</key>
+		<string>4 guests • 3 bedrooms • 4 beds •1 bath</string>
+		<key>distance</key>
+		<string>500 miles away</string>
+		<key>availability</key>
+		<string>5 nights * Feb 10- 15</string>
+		<key>rating</key>
+		<string>4.80</string>
+		<key>url</key>
+		<string>https://www.airbnb.com/rooms/677112</string>
+		<key>description</key>
+		<string>HIGHLANDS CASTLE overlooking Lake George!
+Includes 2 Bedroom Suites and The Great Hall.
+&apos;The Royal Bedroom&apos; for 1 couple.
+&apos;The King&apos;s Suite&apos; for 2 guests.
+
+We have 2 OTHER CASTLES on this property!
+Our 3-CASTLES sleep 16-21 GUESTS:
+1) HIGHLANDS CASTLE sleeps 2-8
+2) CASTLE COTTAGE sleeps 2-6
+3) CASTLE GATEHOUSE sleeps 2-7
+
+Poised on a graceful mountaintop overlooking majestic Lake George, your castle awaits!
+
+*UP TO 26 NON-OVERNIGHT GUESTS ARE ALLOWED ON PROPERTY FOR AN EXTRA FEE of $198/PERSON
+The space
+Highlands Castle is a hidden jewel in a private setting, yet only 3-minutes from downtown Bolton Landing with the conveniences of a supermarket, gourmet restaurants, wine store, brewery, unique shops, 2-public parks with picnic areas, 2-public beaches, swimming, fishing, kayaking, tennis, golf, miniature golf, hiking trails, bicycling, boat rentals, scenic boat cruises, and more!
+Guest access
+Our &quot;2-Suites for 2-Couples&quot; package is a unique getaway for an unforgettable experience! Includes two elegant bedroom suites and access to &apos;The Great Hall&apos; located in the center or heart of Highlands Castle, plus our outdoor terraces with the most spectacular views in the world! Miles of breathtaking, panoramic vistas of Lake George are yours to enjoy!
+
+Guests will have access to the most impressive spaces of the castle including the main entryway, foyer, vestibule area, the Great Hall, music room/library, and the first-floor half bath (in addition to their 2 bedroom suites). The Great Hall is our grandest room of the castle with 25&apos; high ceilings and 21 windows overlooking beautiful Lake George and the Adirondack Mountains. (Note: The Great Hall is curtained off from a private kitchen &amp; family room where the owners reside).
+
+*The upstairs Lakeview &apos;ROYAL BEDROOM&apos; sleeps 1 couple.
+*The downstairs &apos;KING&apos;S SUITE&apos; sleeps 2 guests.
+(The King&apos;s Suite can sleep up to 6 guests ($125/night per guest over 4)
+Each suite has a mini-fridge and a coffee maker.
+
+The &apos;KING SUITE&apos; features an adjoining screened-in covered terrace, plus another outside lower terrace, and both have spectacular lake views!
+
+WE HAVE TWO (2) OTHER CASTLES ON THIS SAME PROPERTY:
+(Search the Airbnb links to our 2 other castles).
+1.) &apos;CASTLE COTTAGE&apos;... our adorable mini-castle overlooking Lake George sleeps 4-6 guests and is located just steps away from Highlands Castle.
+
+2.) &apos;CASTLE GATEHOUSE&apos; sleeps 4-7 guests and is nestled in a wooded setting at the entrance to our property.
+
+Are you looking for a unique setting for a small family gathering, special occasion, birthday party, anniversary celebration, reunion, etc.? (See below):
+
+HIGHLANDS CASTLE is available to rent for a &apos;FAMILY RENTAL&apos;.
+Our FAMILY RENTAL option allows you (the guest) to invite up to 30 people to Highlands Castle from 4-8 pm for an extra fee of $198/person. Note: Book your overnight stay through Airbnb, but inviting &apos;non-overnight guests&apos; to the property is outside the parameters of Airbnb, so contact us directly to discuss your specific details. (Dates are available starting May-Oct).
+
+Highlands Castle is incomparable to all other places. That is what sets us apart. You won&apos;t find a more magical setting to share time with your loved ones!
+During your stay
+The owners, John &amp; Yvonne, live in their section of Highlands Castle (upstairs bedroom, family room &amp; kitchen) which guests do not have access to.
+Your privacy will always be respected, but please know we&apos;re available (via phone, text, email, or in person) if there&apos;s anything you need during your stay.
+Other things to note
+Downtown Shopping: Take a relaxing stroll down Main Street and enjoy all the amenities that Bolton Landing has to offer! You&apos;ll discover fine gift stores, a wine store, brewery, clothing apparel, antique shops, museum, hair salon, pastry shop, and ice cream parlors!
+
+Fun Activities: LAKE GEORGE, America&apos;s queen lake is 32-miles long, for all to enjoy! There&apos;s local hiking trails, bicycle trails, bike rentals, scenic boat cruises, boat rentals, jet skiing, canoeing, kayaking, swimming, fishing, water tubing, whitewater rafting, golf, miniature golf, horseback riding, basketball, tennis, skiing, snowboarding, and adventure sports! There’s plenty to do and see while you’re here including 2-public parks, picnic areas, and 2-beaches!
+
+Experience the natural wonders of Lake George and our Adirondack paradise!
+The memories of Highlands Castle and the Lake George region will last a lifetime!
+
+Please consider purchasing &apos;travel insurance&apos; to safeguard you from unforeseen circumstances.</string>
+		<key>images</key>
+		<array>
+			<string>https://a0.muscache.com/im/pictures/a57ab9ea-80d5-4ed0-aa15-ce536039778d.jpg?im_w=960</string>
+		</array>
+	</dict>
+	<dict>
+		<key>id</key>
 		<string>49986215</string>
 		<key>location</key>
 		<string>Half Moon Bay, California</string>
