add provisioning profile to bazel, hide banner on thread view when textfield is focused

--- a/ChatGPTDemoiOS/BUILD
+++ b/ChatGPTDemoiOS/BUILD
@@ -82,6 +82,7 @@ ios_application(
     launch_storyboard = "//Resources:Launch.storyboard",
     minimum_os_version = "16.0",
     visibility = ["//visibility:public"],
+    provisioning_profile = "ChatGPT_Dev_Certificate.mobileprovision",
     deps = [
         ":lib",
     ],
