--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -3,78 +3,54 @@
 <plist version="1.0">
 <array>
 	<dict>
+		<key>assistant_id</key>
+		<string>asst_2hpahEsCydN5He4I9b4Et9JB</string>
 		<key>id</key>
-		<string>677112</string>
+		<string>34113796</string>
 		<key>location</key>
-		<string>Bolton, New York</string>
+		<string>Abiansemal, Indonesia</string>
 		<key>title</key>
-		<string>&apos;Highlands Castle&apos; overlooking Lake George!</string>
+		<string>Aura House 2bds Eco Bamboo House, Pool, River View</string>
 		<key>capacity</key>
-		<string>4 guests • 3 bedrooms • 4 beds •1 bath</string>
+		<string>4 guests • 2 bedrooms • 2 beds • 2 bath</string>
 		<key>distance</key>
-		<string>500 miles away</string>
+		<string>1500 miles away</string>
 		<key>availability</key>
-		<string>5 nights * Feb 10- 15</string>
+		<string>5 nights * June 2- 7</string>
 		<key>rating</key>
-		<string>4.80</string>
+		<string>4.84</string>
 		<key>url</key>
-		<string>https://www.airbnb.com/rooms/677112</string>
+		<string>https://www.airbnb.com/rooms/34113796</string>
 		<key>description</key>
-		<string>HIGHLANDS CASTLE overlooking Lake George!
-Includes 2 Bedroom Suites and The Great Hall.
-&apos;The Royal Bedroom&apos; for 1 couple.
-&apos;The King&apos;s Suite&apos; for 2 guests.
+		<string>Aura house is a beautiful &amp; unique eco bamboo house built on the west bank of the River Ayung facing east to catch sunrise. Aura House is situated 25min away from Ubud, and 35min away from Canggu.
 
-We have 2 OTHER CASTLES on this property!
-Our 3-CASTLES sleep 16-21 GUESTS:
-1) HIGHLANDS CASTLE sleeps 2-8
-2) CASTLE COTTAGE sleeps 2-6
-3) CASTLE GATEHOUSE sleeps 2-7
-
-Poised on a graceful mountaintop overlooking majestic Lake George, your castle awaits!
-
-*UP TO 26 NON-OVERNIGHT GUESTS ARE ALLOWED ON PROPERTY FOR AN EXTRA FEE of $198/PERSON
+IF WE ARE FULLY BOOKED, PLEASE CHECK OUR AIRBNB PROFILE (CLICK ON OUR PROFILE PICTURE) TO FIND 10 MORE BEAUTIFUL BAMBOO HOUSES, ALL BASED IN THE SAME AREA
 The space
-Highlands Castle is a hidden jewel in a private setting, yet only 3-minutes from downtown Bolton Landing with the conveniences of a supermarket, gourmet restaurants, wine store, brewery, unique shops, 2-public parks with picnic areas, 2-public beaches, swimming, fishing, kayaking, tennis, golf, miniature golf, hiking trails, bicycling, boat rentals, scenic boat cruises, and more!
+Aura House is perched on top of the Ayung river offering a beautiful view. It features 2 very romantic en-suite bedrooms, a large living room fully furnished, a small kitchen, and a private swimming pool with view.
+It is the perfect gateway for adventurous couples and honeymoon.
+The whole house is private - it is just for you and your guests,
+
+We are very proud to have in Aura House one of the famous egg shaped door built by the designer company Ibuku. It is the entrance of the second bedroom.
+
+The atmosphere of Aura House is perfect for people looking to disconnect from their busy city life and/or nature enthusiasts. Be ready to be awaken by the sun peeking up into your room and the sounds of the river down below.
+
+IF WE ARE FULLY BOOKED, PLEASE CHECK OUR AIRBNB PROFILE (CLICK ON OUR PROFILE PICTURE) TO FIND 12 MORE BEAUTIFUL BAMBOO HOUSES, ALL BASED IN THE SAME AREA - GREEN VILLAGE
 Guest access
-Our &quot;2-Suites for 2-Couples&quot; package is a unique getaway for an unforgettable experience! Includes two elegant bedroom suites and access to &apos;The Great Hall&apos; located in the center or heart of Highlands Castle, plus our outdoor terraces with the most spectacular views in the world! Miles of breathtaking, panoramic vistas of Lake George are yours to enjoy!
+Guests may also access our communal space, which includes a natural pool, bamboo pavilion for dining, and our communal kitchen restaurant where guests may order order breakfast, lunch, snacks, drinks and dinner from a selection of local traditional Balinese and Indonesian favorites and Western cuisine options. Guests may choose to eat in our communal dining space or we can deliver meals to your accommodation.
 
-Guests will have access to the most impressive spaces of the castle including the main entryway, foyer, vestibule area, the Great Hall, music room/library, and the first-floor half bath (in addition to their 2 bedroom suites). The Great Hall is our grandest room of the castle with 25&apos; high ceilings and 21 windows overlooking beautiful Lake George and the Adirondack Mountains. (Note: The Great Hall is curtained off from a private kitchen &amp; family room where the owners reside).
-
-*The upstairs Lakeview &apos;ROYAL BEDROOM&apos; sleeps 1 couple.
-*The downstairs &apos;KING&apos;S SUITE&apos; sleeps 2 guests.
-(The King&apos;s Suite can sleep up to 6 guests ($125/night per guest over 4)
-Each suite has a mini-fridge and a coffee maker.
-
-The &apos;KING SUITE&apos; features an adjoining screened-in covered terrace, plus another outside lower terrace, and both have spectacular lake views!
-
-WE HAVE TWO (2) OTHER CASTLES ON THIS SAME PROPERTY:
-(Search the Airbnb links to our 2 other castles).
-1.) &apos;CASTLE COTTAGE&apos;... our adorable mini-castle overlooking Lake George sleeps 4-6 guests and is located just steps away from Highlands Castle.
-
-2.) &apos;CASTLE GATEHOUSE&apos; sleeps 4-7 guests and is nestled in a wooded setting at the entrance to our property.
-
-Are you looking for a unique setting for a small family gathering, special occasion, birthday party, anniversary celebration, reunion, etc.? (See below):
-
-HIGHLANDS CASTLE is available to rent for a &apos;FAMILY RENTAL&apos;.
-Our FAMILY RENTAL option allows you (the guest) to invite up to 30 people to Highlands Castle from 4-8 pm for an extra fee of $198/person. Note: Book your overnight stay through Airbnb, but inviting &apos;non-overnight guests&apos; to the property is outside the parameters of Airbnb, so contact us directly to discuss your specific details. (Dates are available starting May-Oct).
-
-Highlands Castle is incomparable to all other places. That is what sets us apart. You won&apos;t find a more magical setting to share time with your loved ones!
-During your stay
-The owners, John &amp; Yvonne, live in their section of Highlands Castle (upstairs bedroom, family room &amp; kitchen) which guests do not have access to.
-Your privacy will always be respected, but please know we&apos;re available (via phone, text, email, or in person) if there&apos;s anything you need during your stay.
+IF WE ARE FULLY BOOKED, PLEASE CHECK OUR AIRBNB PROFILE (CLICK ON OUR PROFILE PICTURE) TO FIND 10 MORE BEAUTIFUL BAMBOO HOUSES, ALL BASED IN THE SAME AREA
 Other things to note
-Downtown Shopping: Take a relaxing stroll down Main Street and enjoy all the amenities that Bolton Landing has to offer! You&apos;ll discover fine gift stores, a wine store, brewery, clothing apparel, antique shops, museum, hair salon, pastry shop, and ice cream parlors!
+Part of our attraction is that we are set in a very natural environment, and whilst there a couple of local village stores nearby with some very basic supplies, we are 15 mins away the main road. We can help buy supplies for guests, but we do recommend guests bring along any personal supplies needed such as snacks, fruits, drinks.
 
-Fun Activities: LAKE GEORGE, America&apos;s queen lake is 32-miles long, for all to enjoy! There&apos;s local hiking trails, bicycle trails, bike rentals, scenic boat cruises, boat rentals, jet skiing, canoeing, kayaking, swimming, fishing, water tubing, whitewater rafting, golf, miniature golf, horseback riding, basketball, tennis, skiing, snowboarding, and adventure sports! There’s plenty to do and see while you’re here including 2-public parks, picnic areas, and 2-beaches!
+Also, from time to time you might be disturbed by mosquito and other insects (we are in the rain forest after all!). We provide to our guests natural repellent products to reduce as much as possible these nuisances.
 
-Experience the natural wonders of Lake George and our Adirondack paradise!
-The memories of Highlands Castle and the Lake George region will last a lifetime!
+What can you do at Aura House ?
+We are very happy to organise for our guests couple massages, yoga sessions, petals bath (all in-house), airport pick-up, and Bamboo related workshops and tours.
 
-Please consider purchasing &apos;travel insurance&apos; to safeguard you from unforeseen circumstances.</string>
+IF WE ARE FULLY BOOKED, PLEASE CHECK OUR AIRBNB PROFILE (CLICK ON OUR PROFILE PICTURE) TO FIND 10 MORE BEAUTIFUL BAMBOO HOUSES, ALL BASED IN THE SAME AREA</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/a57ab9ea-80d5-4ed0-aa15-ce536039778d.jpg?im_w=960</string>
+			<string>https://a0.muscache.com/im/pictures/e25a9b25-fa98-4160-bfd1-039287bf38b6.jpg?im_w=960</string>
 		</array>
 	</dict>
 	<dict>
@@ -310,6 +286,81 @@ Other things to note
 		<key>images</key>
 		<array>
 			<string>https://a0.muscache.com/im/pictures/prohost-api/Hosting-680532366698763136/original/17f39935-3104-40db-9510-b1387190c346.jpeg?im_w=1200</string>
+		</array>
+	</dict>
+	<dict>
+		<key>id</key>
+		<string>677112</string>
+		<key>location</key>
+		<string>Bolton, New York</string>
+		<key>title</key>
+		<string>&apos;Highlands Castle&apos; overlooking Lake George!</string>
+		<key>capacity</key>
+		<string>4 guests • 3 bedrooms • 4 beds •1 bath</string>
+		<key>distance</key>
+		<string>500 miles away</string>
+		<key>availability</key>
+		<string>5 nights * Feb 10- 15</string>
+		<key>rating</key>
+		<string>4.80</string>
+		<key>url</key>
+		<string>https://www.airbnb.com/rooms/677112</string>
+		<key>description</key>
+		<string>HIGHLANDS CASTLE overlooking Lake George!
+Includes 2 Bedroom Suites and The Great Hall.
+&apos;The Royal Bedroom&apos; for 1 couple.
+&apos;The King&apos;s Suite&apos; for 2 guests.
+
+We have 2 OTHER CASTLES on this property!
+Our 3-CASTLES sleep 16-21 GUESTS:
+1) HIGHLANDS CASTLE sleeps 2-8
+2) CASTLE COTTAGE sleeps 2-6
+3) CASTLE GATEHOUSE sleeps 2-7
+
+Poised on a graceful mountaintop overlooking majestic Lake George, your castle awaits!
+
+*UP TO 26 NON-OVERNIGHT GUESTS ARE ALLOWED ON PROPERTY FOR AN EXTRA FEE of $198/PERSON
+The space
+Highlands Castle is a hidden jewel in a private setting, yet only 3-minutes from downtown Bolton Landing with the conveniences of a supermarket, gourmet restaurants, wine store, brewery, unique shops, 2-public parks with picnic areas, 2-public beaches, swimming, fishing, kayaking, tennis, golf, miniature golf, hiking trails, bicycling, boat rentals, scenic boat cruises, and more!
+Guest access
+Our &quot;2-Suites for 2-Couples&quot; package is a unique getaway for an unforgettable experience! Includes two elegant bedroom suites and access to &apos;The Great Hall&apos; located in the center or heart of Highlands Castle, plus our outdoor terraces with the most spectacular views in the world! Miles of breathtaking, panoramic vistas of Lake George are yours to enjoy!
+
+Guests will have access to the most impressive spaces of the castle including the main entryway, foyer, vestibule area, the Great Hall, music room/library, and the first-floor half bath (in addition to their 2 bedroom suites). The Great Hall is our grandest room of the castle with 25&apos; high ceilings and 21 windows overlooking beautiful Lake George and the Adirondack Mountains. (Note: The Great Hall is curtained off from a private kitchen &amp; family room where the owners reside).
+
+*The upstairs Lakeview &apos;ROYAL BEDROOM&apos; sleeps 1 couple.
+*The downstairs &apos;KING&apos;S SUITE&apos; sleeps 2 guests.
+(The King&apos;s Suite can sleep up to 6 guests ($125/night per guest over 4)
+Each suite has a mini-fridge and a coffee maker.
+
+The &apos;KING SUITE&apos; features an adjoining screened-in covered terrace, plus another outside lower terrace, and both have spectacular lake views!
+
+WE HAVE TWO (2) OTHER CASTLES ON THIS SAME PROPERTY:
+(Search the Airbnb links to our 2 other castles).
+1.) &apos;CASTLE COTTAGE&apos;... our adorable mini-castle overlooking Lake George sleeps 4-6 guests and is located just steps away from Highlands Castle.
+
+2.) &apos;CASTLE GATEHOUSE&apos; sleeps 4-7 guests and is nestled in a wooded setting at the entrance to our property.
+
+Are you looking for a unique setting for a small family gathering, special occasion, birthday party, anniversary celebration, reunion, etc.? (See below):
+
+HIGHLANDS CASTLE is available to rent for a &apos;FAMILY RENTAL&apos;.
+Our FAMILY RENTAL option allows you (the guest) to invite up to 30 people to Highlands Castle from 4-8 pm for an extra fee of $198/person. Note: Book your overnight stay through Airbnb, but inviting &apos;non-overnight guests&apos; to the property is outside the parameters of Airbnb, so contact us directly to discuss your specific details. (Dates are available starting May-Oct).
+
+Highlands Castle is incomparable to all other places. That is what sets us apart. You won&apos;t find a more magical setting to share time with your loved ones!
+During your stay
+The owners, John &amp; Yvonne, live in their section of Highlands Castle (upstairs bedroom, family room &amp; kitchen) which guests do not have access to.
+Your privacy will always be respected, but please know we&apos;re available (via phone, text, email, or in person) if there&apos;s anything you need during your stay.
+Other things to note
+Downtown Shopping: Take a relaxing stroll down Main Street and enjoy all the amenities that Bolton Landing has to offer! You&apos;ll discover fine gift stores, a wine store, brewery, clothing apparel, antique shops, museum, hair salon, pastry shop, and ice cream parlors!
+
+Fun Activities: LAKE GEORGE, America&apos;s queen lake is 32-miles long, for all to enjoy! There&apos;s local hiking trails, bicycle trails, bike rentals, scenic boat cruises, boat rentals, jet skiing, canoeing, kayaking, swimming, fishing, water tubing, whitewater rafting, golf, miniature golf, horseback riding, basketball, tennis, skiing, snowboarding, and adventure sports! There’s plenty to do and see while you’re here including 2-public parks, picnic areas, and 2-beaches!
+
+Experience the natural wonders of Lake George and our Adirondack paradise!
+The memories of Highlands Castle and the Lake George region will last a lifetime!
+
+Please consider purchasing &apos;travel insurance&apos; to safeguard you from unforeseen circumstances.</string>
+		<key>images</key>
+		<array>
+			<string>https://a0.muscache.com/im/pictures/a57ab9ea-80d5-4ed0-aa15-ce536039778d.jpg?im_w=960</string>
 		</array>
 	</dict>
 </array>
