add new listing

--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -4,6 +4,76 @@
 <array>
 	<dict>
 		<key>assistant_id</key>
+		<string>asst_FyfjTT7lMGngr5YS5YLlxClY</string>
+		<key>id</key>
+		<string>46695796</string>
+		<key>location</key>
+		<string>Lac-Beauport, Canada</string>
+		<key>title</key>
+		<string>MICA - Panoramic view close to Quebec City</string>
+		<key>capacity</key>
+		<string>4 guests • 2 bedrooms • 4 beds • 1 bath</string>
+		<key>distance</key>
+		<string>400 miles away</string>
+		<key>availability</key>
+		<string>5 nights * June 2- 7</string>
+		<key>rating</key>
+		<string>4.98</string>
+		<key>url</key>
+		<string>https://www.airbnb.com/rooms/46695796</string>
+		<key>description</key>
+		<string>Listing: MICA - Panoramic view close to Quebec City
+Listing URL: https://www.airbnb.com/rooms/46695796
+
+Step into the world of &quot;MICA&quot;, an upscale micro-house nestled atop the mountain. Immerse yourself in a captivating scenic experience, a mere 30-minute drive from Old Quebec.
+
+Indulge in a breathtaking view of the valley and mountains, along with awe-inspiring sunsets from the comfort of your bed. Embark on a journey akin to a national park experience through the mountain&apos;s distinctive topography by navigating recreational trails accessible year-round.
+
+Let yourself be seduced by one of the most majestic and unique residences in the Quebec region.
+
+Thanks to its minimalist design with clean lines, this micro-house seamlessly integrates into its environment, providing a privileged setting to contemplate the splendor of nature. Like the mineral that makes up the characteristic rocky outcrops of the region, Mica clings to the mountainside, revealing a breathtaking panorama.
+
+The master bedroom, located upstairs, features a queen-size bed offering vertiginous views on the mountains stretching as far as the eye can see. Full-size windows on both levels allow you to admire the beauty of the landscape in every season.
+
+Enjoy year-round comfort with heated floors throughout the house, a central heating/cooling system, and a gas stove ensuring enveloping warmth even on the coldest winter days.
+
+A combination of superposed beds upstairs and a sofa bed on the first floor will accommodate extra guests comfortably .
+
+The kitchen is equipped with all the modern amenities you could desire: refrigerator, freezer, dishwasher, microwave, oven, Nespresso coffee machine, and a complete set of cookware for preparing delicious meals at home. Outdoor amenities such as the barbecue and wood fireplace are operational year-round, providing you the opportunity to fully enjoy the outdoor space.
+
+Just twelve minutes away, discover a high-end supermarket, a bakery offering fresh morning croissants and special bread, as well as a selection of local restaurants to satisfy all your culinary cravings.
+
+Activities Nearby:
+
+When you&apos;re ready to explore the surroundings, you&apos;ll have numerous options:
+
+Snowshoeing: On the property.
+Fatbiking: Access trail at 100 meters, bike rental center at Sentiers du Moulin, 2 minutes away.
+Cross-country skiing: Sentiers Du Moulin, 2 minutes away.
+Ski lifts: Le Relais (10 minutes), Stoneham (25 minutes), Mont-Ste-Anne (1 hour), or Le Massif (1 hour and 15 minutes).
+Ice skating: 3 km natural skating rink on the lake (Lac Beauport, 10 minutes).
+Microbrewery: Archibald (10 minutes).
+Dog sledding: Pourvoirie du Lac-Beauport (15 minutes).
+Snowmobiling: Pourvoirie du Lac-Beauport (15 minutes).
+First Nations Village: Wendake (25 minutes).
+Nightlife: Quebec City (25-30 minutes).
+Top Restaurants: Quebec City (25-30 minutes).
+Old Quebec and Château Frontenac: 30 minutes.
+Scandinavian spa (nearest): Siberia Spa (10 minutes).
+Scandinavian spa (recommended): Le Ström (30 minutes).
+Montmorency WatterFalls: 30 minutes.
+Ice Hotel: Valcartier (30 minutes).
+Tube Snow Sliding: Valcartier (30 minutes).
+Indoor (winter) and Outdoor (summer) Water Park: Valcartier (30 minutes).
+National Park: Parc de la Jacques-Cartier (45 minutes) (snowshoeing, fat biking, hiking, skishoeing, tubing, kicksledding).
+National Park (recommended): Parc National des Grands Jardins (1 hour and a half)</string>
+		<key>images</key>
+		<array>
+			<string>https://a0.muscache.com/im/pictures/miso/Hosting-46695796/original/38bc8081-9415-453a-b8bf-9f4aeb146819.jpeg?im_w=1200</string>
+		</array>
+	</dict>
+	<dict>
+		<key>assistant_id</key>
 		<string>asst_2hpahEsCydN5He4I9b4Et9JB</string>
 		<key>id</key>
 		<string>34113796</string>
