--- a/ChatGPTDemoiOS/Resources/listings.plist
+++ b/ChatGPTDemoiOS/Resources/listings.plist
@@ -69,7 +69,7 @@ National Park: Parc de la Jacques-Cartier (45 minutes) (snowshoeing, fat biking,
 National Park (recommended): Parc National des Grands Jardins (1 hour and a half)</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/miso/Hosting-46695796/original/088a6251-1a8c-459c-9f14-6d131fdb1a68.jpeg?im_w=1200</string>
+			<string>https://firebasestorage.googleapis.com/v0/b/chatgptdemo-b54c7.appspot.com/o/46695796.jpeg?alt=media&amp;token=f4eae306-e038-4ba4-bb53-e004ac4442dd</string>
 		</array>
 	</dict>
 	<dict>
@@ -120,7 +120,7 @@ We are very happy to organise for our guests couple massages, yoga sessions, pet
 IF WE ARE FULLY BOOKED, PLEASE CHECK OUR AIRBNB PROFILE (CLICK ON OUR PROFILE PICTURE) TO FIND 10 MORE BEAUTIFUL BAMBOO HOUSES, ALL BASED IN THE SAME AREA</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/e25a9b25-fa98-4160-bfd1-039287bf38b6.jpg?im_w=960</string>
+			<string>https://firebasestorage.googleapis.com/v0/b/chatgptdemo-b54c7.appspot.com/o/34113796.jpeg?alt=media&amp;token=9009ce30-e581-4f9a-952b-f330df467a79</string>
 		</array>
 	</dict>
 	<dict>
@@ -204,7 +204,7 @@ Other things to note
 No children please: safety reasons. 2 guest limit.</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/38691cf9-b5c6-4052-bc79-60ea4a6ace72.jpg?im_w=1200</string>
+			<string>https://firebasestorage.googleapis.com/v0/b/chatgptdemo-b54c7.appspot.com/o/49986215.jpeg?alt=media&amp;token=948495f2-15d8-436f-a67e-9d45b1d73d9c</string>
 		</array>
 	</dict>
 	<dict>
@@ -303,7 +303,7 @@ Thank you kindly
 Georgia + Asher</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/7accc1b8-639d-4bd1-be75-9da488c4b0dc.jpg?im_w=1200</string>
+			<string>https://firebasestorage.googleapis.com/v0/b/chatgptdemo-b54c7.appspot.com/o/889189502572660333.jpeg?alt=media&amp;token=09c0c601-46d8-4354-b3e5-46c3e3d27a88</string>
 		</array>
 	</dict>
 	<dict>
@@ -355,7 +355,7 @@ Other things to note
 ***Please note: If you are booking this property during an event, the parking spot may not be available as the city of Capitola will often times block off Esplanade for these events. There is a parking pass inside the home that you can use to park around the village***</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/prohost-api/Hosting-680532366698763136/original/17f39935-3104-40db-9510-b1387190c346.jpeg?im_w=1200</string>
+			<string>https://firebasestorage.googleapis.com/v0/b/chatgptdemo-b54c7.appspot.com/o/680532366698763136.jpeg?alt=media&amp;token=3d810294-82ee-4ff7-85d9-421465c2fa6e</string>
 		</array>
 	</dict>
 	<dict>
@@ -430,7 +430,7 @@ The memories of Highlands Castle and the Lake George region will last a lifetime
 Please consider purchasing &apos;travel insurance&apos; to safeguard you from unforeseen circumstances.</string>
 		<key>images</key>
 		<array>
-			<string>https://a0.muscache.com/im/pictures/a57ab9ea-80d5-4ed0-aa15-ce536039778d.jpg?im_w=960</string>
+			<string>https://firebasestorage.googleapis.com/v0/b/chatgptdemo-b54c7.appspot.com/o/677112.jpeg?alt=media&amp;token=cb5e0a38-2bc4-4c3c-ad3c-9cd1ed0385c9</string>
 		</array>
 	</dict>
 </array>
